--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,30 @@ body{
 
 div#content{
     background-color: rgba(197, 182, 163, 0.822);
-    height: 100%;
+    height: 95%;
     width: 70%;
     display: flex;
     /* align-items: center; */
-    justify-content: center;
+    /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
 
+.addProjectButton{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 2em;
+    width: 100%;
+    background-color: rgb(63, 138, 76);
+    border: none;
+    font-size: 1.1em;
+    
+}
+
+.addProjectButton:hover{
+    background-color: rgb(40, 87, 48);
 }
 
 div.tabDiv{
@@ -28,6 +46,7 @@ div.tabDiv{
     flex-direction: row;
     height: 5em;
     width: 100%;
+    
 }
 
 .tabs{
@@ -52,4 +71,24 @@ div.tabDiv{
 .selected:hover{
     background-color: rgb(161, 40, 40);
     flex: 1.2;
+}
+
+.toDoItemForm{
+    position: absolute;
+    border: rgb(221, 0, 0) solid 1px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    top: 15vh;
+    background-color: white;
+}
+
+.projectItemForm{
+    position: absolute;
+    border: rgb(221, 0, 0) solid 1px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    top: 15vh;
+    background-color: white;
 }
