--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,20 @@ body{
 div#content{
     background-color: rgba(197, 182, 163, 0.822);
     height: 95%;
-    width: 70%;
+    width: 100%;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+}
+
+div#projectContent{
+    background-color: rgba(197, 182, 163, 0.822);
+    height: 95%;
+    width: 100%;
     display: flex;
     /* align-items: center; */
     /* justify-content: center; */
